# CudaKernelLab

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cuda-build.yml
benchmarks/: benchmark_kernels.cpp
include/: kernels.hpp
src/: host.cpp  kernels.cu
tests/: kernel_tests.cpp
